# xbloom-ble

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.claude/skills/brew/: SKILL.md
.claude/skills/xbloom/: SKILL.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  pr-title.yml  release.yml
docs/: RELEASING.md  REVERSE-ENGINEERING.md
recipes/: example-iced.yaml  example-natural.yaml  example-washed.yaml
tests/: test_cli.py  test_cli_config.py  test_client.py  test_cloud.py  test_control.py  test_from_source.py  test_paths_config.py  test_protocol.py  test_recipe.py  test_save_slot.py  test_telemetry.py  test_tui.py
xbloom_ble/: __init__.py  cli.py  client.py  cloud.py  config.py  paths.py  protocol.py  recipe.py  telemetry.py
xbloom_ble/tui/: __init__.py  app.py  confirm.py  controller.py  editor.py  help.py  history.py  slots.py  store.py
