[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xbloom-ble"
version = "1.1.1"
description = "Unofficial Bluetooth LE control for the xBloom Studio coffee machine (loads recipes only — never auto-starts a brew)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Janczykkkko" }]
keywords = ["xbloom", "coffee", "bluetooth", "ble", "bleak", "pour-over"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Home Automation",
]
dependencies = [
    "bleak>=0.21",
    "pyyaml>=6",
]

[project.optional-dependencies]
# The optional cloud feature (push recipes to your xBloom app account) needs an
# RSA implementation. BLE control works without it.
cloud = ["cryptography>=41"]
# The interactive terminal UI (`xbloom` with no args, or `xbloom tui`).
tui = ["textual>=1", "textual-plotext>=1"]
dev = ["pytest>=7", "pytest-cov>=4", "ruff>=0.1", "cryptography>=41", "textual>=1", "textual-plotext>=1"]

[project.urls]
Homepage = "https://github.com/Janczykkkko/xbloom-ble"
Repository = "https://github.com/Janczykkkko/xbloom-ble"

[project.scripts]
xbloom = "xbloom_ble.cli:main"


[tool.setuptools.packages.find]
include = ["xbloom_ble*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["xbloom_ble"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    "\\.\\.\\.",              # abstract-method / protocol stubs
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Test data (captured hex frames, tabular assertions) is naturally wide.
"tests/*" = ["E501"]

[tool.semantic_release]
# Version lives in both places; keep them in lockstep on release.
version_toml = ["pyproject.toml:project.version"]
version_variables = ["xbloom_ble/__init__.py:__version__"]
build_command = "python -m pip install build && python -m build"
commit_message = "chore(release): v{version} [skip ci]"
tag_format = "v{version}"
# Conventional Commits: feat -> minor, fix/perf -> patch, BREAKING CHANGE -> major.
commit_parser = "conventional"
allow_zero_version = true

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.changelog]
# "update" mode preserves the curated CHANGELOG and inserts new versions at the
# insertion flag — so hand-tidied entries are never regenerated/clobbered.
mode = "update"
insertion_flag = "<!-- version list -->"
exclude_commit_patterns = ['''^chore\(release\):''']
